--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="top-nav">
         <h1>Nathan English</h1>
         <ul>
-          <li><a href="#home">Home</a></li>
+          <li><a href="#top">Home</a></li>
           <li><a href="#Portfolio">Portfolio</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
@@ -115,17 +116,17 @@
         </div>
       </div>
     </main>
+    <footer>
+      <span class="span-style">Nathan English</span>
+      <nav>
+        <a href="#top"class="span-style" id="backTop">Back to Top</a>
+        <ul class="bottom-nav">
+          <li><a href="#top">Home</a></li>
+          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Contact">Contact</a></li>
+        </ul>
+      </nav>
+    </footer>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
-
-  <footer>
-    <span>Nathan English</span>
-    <div>
-      <ul class="bottom-nav">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#Portfolio">Portfolio</a></li>
-        <li><a href="#Contact">Contact</a></li>
-      </ul>
-    </div>
-  </footer>
 </html>
