--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@
           <section class="contact" id="Contact">
             <h3>Contact</h3>
             <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-            <p>Phone : 1(815)000-0000</p>
-            <p>Email : englishnathan35@gmail.com</p>
+            <p>Phone : <b>1(815)000-0000</b></p>
+            <p>Email : <b>englishnathan35@gmail.com</b></p>
           </section>
         </div>
       </div>
     </main>
     <footer>
-      <span class="span-style">Nathan English</span>
+      <span class="span-style"><b>Nathan English</b></span>
       <nav>
         <a href="#top"class="span-style" id="backTop">Back to Top</a>
         <ul class="bottom-nav">
-          <li><a href="#top">Home</a></li>
-          <li><a href="#Portfolio">Portfolio</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="#top"><b>Home</b></a></li>
+          <li><a href="#Portfolio"><b>Portfolio</b></a></li>
+          <li><a href="#Contact"><b>Contact</b></a></li>
         </ul>
       </nav>
     </footer>
